tweak size of dashboard widget at different screen widths (prevent wrapping).

--- a/assets/css/authorizer.css
+++ b/assets/css/authorizer.css
@@ -80,17 +80,13 @@ body.toplevel_page_authorizer .spinner .spinner-text,
 	opacity: 0.5;
 }
 
-/* Limit dashboard widget size */
-/*
 #auth_dashboard_widget > .inside {
-	max-height: 300px;
-	overflow-y: scroll;
 	margin-top: 0;
 }
-*/
 
 #auth_dashboard_widget input, #auth_dashboard_widget select {
 	font-size: 90%;
+	width: 90px;
 }
 
 #auth_dashboard_widget input[type="radio"] {
@@ -114,10 +110,10 @@ body.toplevel_page_authorizer .spinner .spinner-text,
 	#auth_dashboard_widget #new_approved_user_email,
 	#auth_dashboard_widget #list_auth_settings_access_users_blocked .auth-email,
 	#auth_dashboard_widget #new_blocked_user_email {
-		width: 80px;
+		width: 85px;
 	}
 	#auth_dashboard_widget select {
-		width: 80px;
+		width: 60px;
 	}
 }
 
